# nanoflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci-static-checks.yml  ci-tests.yml  community-issue-auto-comments.yml  community-issue-translate.yml  readme-translation-sync.yml  release-semantic.yml  release.yml  static-check.yml  test.yml
examples/: error.toml  matrix.toml  simple.toml
nanoflow/: cli.py  config.py  executor.py  resource_pool.py  task.py  utils.py  workflow.py
tests/: test_cli.py  test_config.py  test_e2e.py  test_executor.py  test_resource_pool.py  test_task.py  test_utils.py  test_workflow.py
