[project]
name = "nanoflow"
description = "A simple and efficient workflow framework for Python"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0" }
authors = [{ name = "Zhan Rongrui", email = "2742392377@qq.com" }]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "humanize>=4.11.0",
  "loguru>=0.7.0",
  "networkx>=3.0",
  "pydantic>=2.0.0",
  "rich>=13.8.0",
  "textual>=0.81.0",
  "toml>=0.10.0",
  "typer>=0.12.5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/zrr1999/nanoflow.git"
Repository = "https://github.com/zrr1999/nanoflow.git"

[project.scripts]
nanoflow = "nanoflow.__main__:app"

[project.optional-dependencies]
plot = ["matplotlib>=3.9.0"]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.6"]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-codspeed>=4.2.0",
  "pytest-cov>=7.0.0",
  "xdoctest>=1.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
exclude_also = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

[tool.pdm.version]
source = "scm"
write_to = "nanoflow/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
includes = ["nanoflow"]
source-includes = ["tests", "README.md"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8
  "B",
  "C4",
  "YTT",
  "TID",
  "PTH",
  # Pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
]
ignore = ["F841", "PGH003", "B008", "RUF001", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.ruff.lint.isort]
known-first-party = ["recognize"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
